--- a/.azure-pipelines/config.yml
+++ b/.azure-pipelines/config.yml
@@ -1,8 +1,6 @@
 variables:
   - name: NODE_VERSION
     value: 10.16.0
-  - name: POETRY_VERSION
-    value: 0.12.17
   - name: PYTHON_VERSION
     value: 3.7.2
   - name: YARN_CACHE_DIR
@@ -23,6 +21,9 @@ stages:
           - template: templates/cache-yarn-packages.yml
             parameters:
               path: $(YARN_CACHE_DIR)
+          - script: |
+              yarn add --global yarn
+              yarn --version
           - script: yarn install --cache-folder $(YARN_CACHE_DIR) --frozen-lockfile
             displayName: Install Node dependencies
       - job: static_analysis
@@ -66,14 +67,13 @@ stages:
             displayName: Use Python version
             inputs:
               versionSpec: $(PYTHON_VERSION)
+          - template: templates/setup-poetry.yml
+            parameters:
+              path: $(POETRY_CACHE_DIR)
           - template: templates/cache-poetry-packages.yml
             parameters:
               key: $(WORKING_DIR)/poetry.lock
               path: $(POETRY_CACHE_DIR)
-          - script: pip install --upgrade pip poetry==$(POETRY_VERSION)
-            displayName: Install Poetry
-          - script: poetry config settings.virtualenvs.path $(POETRY_CACHE_DIR)
-            displayName: Configure Poetry
           - script: poetry install
             displayName: Install Python dependencies
             workingDirectory: $(WORKING_DIR)
@@ -97,14 +97,13 @@ stages:
             displayName: Use Python version
             inputs:
               versionSpec: $(PYTHON_VERSION)
+          - template: templates/setup-poetry.yml
+            parameters:
+              path: $(POETRY_CACHE_DIR)
           - template: templates/cache-poetry-packages.yml
             parameters:
               key: $(WORKING_DIR)/poetry.lock
               path: $(POETRY_CACHE_DIR)
-          - script: pip install --upgrade pip poetry==$(POETRY_VERSION)
-            displayName: Install Poetry
-          - script: poetry config settings.virtualenvs.path $(POETRY_CACHE_DIR)
-            displayName: Configure Poetry
           - script: poetry install
             displayName: Install Python dependencies
             workingDirectory: $(WORKING_DIR)
@@ -143,14 +142,13 @@ stages:
             displayName: Use Python version
             inputs:
               versionSpec: $(PYTHON_VERSION)
+          - template: templates/setup-poetry.yml
+            parameters:
+              path: $(POETRY_CACHE_DIR)
           - template: templates/cache-poetry-packages.yml
             parameters:
               key: $(WORKING_DIR)/poetry.lock
               path: $(POETRY_CACHE_DIR)
-          - script: pip install --upgrade pip poetry==$(POETRY_VERSION)
-            displayName: Install Poetry
-          - script: poetry config settings.virtualenvs.path $(POETRY_CACHE_DIR)
-            displayName: Configure Poetry
           - script: poetry install
             displayName: Install Python dependencies
             workingDirectory: $(WORKING_DIR)
