--- a/.azure-pipelines/templates/setup-yarn.yml
+++ b/.azure-pipelines/templates/setup-yarn.yml
@@ -8,7 +8,7 @@ steps:
         echo '##vso[task.complete result=Failed;]DONE'
       fi
     displayName: Check for required parameters
-  - bash: curl --compressed --location https://yarnpkg.com/install.sh --output - | bash -s -- --version ${{ parameters.version }}
+  - script: curl --compressed --location https://yarnpkg.com/install.sh --output - | bash -s -- --version ${{ parameters.version }}
     displayName: Install Yarn
   - script: yarn config set cache-folder ${{ parameters.path }}
     displayName: Configure Yarn
