--- a/packages/ai/pyproject.toml
+++ b/packages/ai/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["poetry==0.12.17"]
+requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
 [tool.black]
@@ -25,7 +25,7 @@ authors = [
 repository = "https://github.com/ajtorres9/marvin/tree/master/packages/ai"
 
 [tool.poetry.dependencies]
-python = "^3.7.2"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 black = "^19.3b0"
