--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           python-version: 3.7
       - name: Install Poetry
-        run: pip install --upgrade pip poetry==0.12
+        run: pip install --upgrade pip poetry>=0.12
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
@@ -74,12 +74,12 @@ jobs:
         with:
           python-version: 3.7
       - name: Install Poetry
-        run: pip install --upgrade pip poetry==0.12
+        run: pip install --upgrade pip poetry>=0.12
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
       - name: Test units
-        run: yarn --silent test:units --cov ai --cov-branch --cov-report html --cov-report xml --doctest-modules
+        run: yarn --silent test:units --cov ai --cov-branch --cov-report xml --doctest-modules
         working-directory: packages/ai
       - name: Publish code coverage results
         run: yarn codecov -F ai -t ${{  secrets.CODECOV_TOKEN }}
