--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,9 @@ jobs:
         with:
           python-version: 3.7
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=0.12
+        run: |
+          pip install --upgrade pip poetry>=0.12
+          poetry --version
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
@@ -74,7 +76,9 @@ jobs:
         with:
           python-version: 3.7
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=0.12
+        run: |
+          pip install --upgrade pip poetry>=0.12
+          poetry --version
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
