--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=0.12
+        run: pip install --upgrade pip poetry>=1.0.0b8
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
@@ -74,7 +74,7 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=0.12
+        run: pip install --upgrade pip poetry>=1.0.0b8
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
