--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,15 @@ jobs:
           node-version: 12.13
       - name: Install Yarn
         run: npm install --global yarn@1.19
+      - name: Set Yarn cache directory
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Restore Yarn cache
+        uses: actions/cache@v1.0.3
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-cache-
       - name: Install Node dependencies
         run: yarn install --frozen-lockfile
       - name: Lint files
@@ -35,6 +44,15 @@ jobs:
           node-version: 12.13
       - name: Install Yarn
         run: npm install --global yarn@1.19
+      - name: Set Yarn cache directory
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Restore Yarn cache
+        uses: actions/cache@v1.0.3
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-cache-
       - name: Install Node dependencies
         run: yarn install --frozen-lockfile
       - name: Setup Python
@@ -42,7 +60,16 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=1.0.0b8
+        run: pip install --upgrade pip poetry==1.0.0b8
+      - name: Set Poetry cache directory
+        id: poetry-cache
+        run: echo "::set-output name=dir::$(poetry config cache-dir)"
+      - name: Restore Poetry cache
+        uses: actions/cache@v1.0.3
+        with:
+          path: ${{ steps.poetry-cache.outputs.dir }}
+          key: ${{ runner.os }}-poetry-cache-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-cache-
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
@@ -67,6 +94,15 @@ jobs:
           node-version: 12.13
       - name: Install Yarn
         run: npm install --global yarn@1.19
+      - name: Set Yarn cache directory
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Restore Yarn cache
+        uses: actions/cache@v1.0.3
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-cache-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-cache-
       - name: Install Node dependencies
         run: yarn install --frozen-lockfile
       - name: Setup Python
@@ -74,7 +110,16 @@ jobs:
         with:
           python-version: 3.8
       - name: Install Poetry
-        run: pip install --upgrade pip poetry>=1.0.0b8
+        run: pip install --upgrade pip poetry==1.0.0b8
+      - name: Set Poetry cache directory
+        id: poetry-cache
+        run: echo "::set-output name=dir::$(poetry config cache-dir)"
+      - name: Restore Poetry cache
+        uses: actions/cache@v1.0.3
+        with:
+          path: ${{ steps.poetry-cache.outputs.dir }}
+          key: ${{ runner.os }}-poetry-cache-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-cache-
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
