--- a/packages/ai/pyproject.toml
+++ b/packages/ai/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["poetry>=1.0.0b8"]
+requires = ["poetry==1.0.0b8"]
 build-backend = "poetry.masonry.api"
 
 [tool.black]
