--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "url": "git+https://github.com/ajtorres9/marvin.git"
   },
   "scripts": {
-    "lint": "yarn lint:files && lerna run --stream lint",
+    "lint": "npm-run-all --parallel \"lint:*\"",
     "lint:files": "prettylint \"**/*.{json,md,yml}\" \"!packages/**\"",
-    "test": "lerna run --stream test"
+    "lint:packages": "lerna run --stream lint",
+    "test": "npm-run-all --parallel \"test:*\"",
+    "test:packages": "lerna run --stream test"
   },
   "config": {
     "commitizen": {
@@ -34,6 +36,7 @@
     "husky": "^3.1.0",
     "lerna": "^3.20.2",
     "lint-staged": "^9.5.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "prettier-plugin-toml": "^0.3.1",
     "prettylint": "^1.0.0"
