--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,8 @@ jobs:
         uses: actions/cache@v1.2.0
         with:
           path: ${{ steps.poetry-cache.outputs.dir }}
-          key: ${{ runner.os }}-ai-poetry-cache-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: ${{ runner.os }}-ai-poetry-cache-
+          key: ai-poetry-cache-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ai-poetry-cache-
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
@@ -85,8 +85,8 @@ jobs:
         uses: actions/cache@v1.2.0
         with:
           path: ${{ steps.poetry-cache.outputs.dir }}
-          key: ${{ runner.os }}-ai-poetry-cache-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: ${{ runner.os }}-ai-poetry-cache-
+          key: ai-poetry-cache-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: ai-poetry-cache-
       - name: Install Python dependencies
         run: poetry install
         working-directory: packages/ai
