chore: update meta

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,6 +4,7 @@
 
 # For the following file types, normalize line endings to LF on check-in and
 # prevent conversion to CRLF when they are checked out
+*.gz    binary
 *.png   binary
 *.zip   binary
 
