--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,7 @@
+packageExtensions:
+  prettier-plugin-toml@*:
+    dependencies:
+      '@toml-tools/lexer': '*'
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.js
     spec: '@yarnpkg/plugin-interactive-tools'
