--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "prettylint": "^1.0.0",
     "rxjs": "^6.6.0"
   },
+  "dependenciesMeta": {
+    "husky": {
+      "built": false
+    }
+  },
   "engines": {
     "node": ">=12.18",
     "yarn": ">=1.22"
