--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
     "prettier-plugin-toml": "^0.3.1",
-    "prettylint": "^1.0.0",
-    "rxjs": "^6.6.0"
+    "prettylint": "^1.0.0"
   },
   "dependenciesMeta": {
     "husky": {
