chore: update prettier configuration

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,10 +1,12 @@
-# Dependencies
-.yarn/unplugged
-.yarn/build-state.yml
-.pnp.js
-
-# Logs
-*.log*
-
 # Miscellaneous
+!**/.*
 .all-contributorsrc
+
+# Dependencies
+.yarn
+
+# Version Control
+.git
+
+# Workspaces
+packages
