chore: update yarn plugins

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,8 +3,8 @@ packageExtensions:
     dependencies:
       '@toml-tools/lexer': '*'
 plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.js
+  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: '@yarnpkg/plugin-interactive-tools'
-  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.js
+  - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
 yarnPath: .yarn/releases/yarn-2.2.2.cjs
