chore: update project metadata

--- a/lerna.json
+++ b/lerna.json
@@ -2,6 +2,6 @@
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "loglevel": "success",
+  "loglevel": "warn",
   "packages": ["packages/*"]
 }
