--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
     "hook:pre-commit": "lint-staged",
     "lint": "npm-run-all --parallel \"lint:*\"",
     "lint:files": "prettylint \"**/*.{json,md,yml}\" \"!packages/**\"",
-    "lint:workspaces": "lerna run --stream lint",
+    "lint:workspaces": "turbo run lint",
     "prepare": "husky install",
     "test": "npm-run-all --parallel \"test:*\"",
-    "test:workspaces": "lerna run --stream test"
+    "test:workspaces": "turbo run test"
   },
   "config": {
     "commitizen": {
@@ -36,12 +36,12 @@
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.1",
-    "lerna": "^5.5.2",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prettier-plugin-toml": "^0.3.1",
-    "prettylint": "^1.0.0"
+    "prettylint": "^1.0.0",
+    "turbo": "^1.5.4"
   },
   "engines": {
     "node": ">=16.17",
