--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "url": "git+https://github.com/ajtorres9/marvin.git"
   },
   "scripts": {
+    "clean": "npm-run-all --parallel \"clean:*\"",
+    "clean:files": "del \"*\\.log*\"",
+    "clean:workspaces": "turbo run clean",
     "hook:pre-commit": "lint-staged",
     "lint": "npm-run-all --parallel \"lint:*\"",
-    "lint:files": "prettylint \"**/*.{json,md,yml}\" \"!packages/**\"",
+    "lint:files": "prettylint \"**/*.{json,md,yml}\"",
     "lint:workspaces": "turbo run lint",
-    "prepare": "husky install",
+    "postinstall": "husky install",
     "test": "npm-run-all --parallel \"test:*\"",
     "test:workspaces": "turbo run test"
   },
@@ -35,6 +38,7 @@
   },
   "devDependencies": {
     "cz-conventional-changelog": "^3.3.0",
+    "del-cli": "^5.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
