--- a/packages/ai/.prettierignore
+++ b/packages/ai/.prettierignore
@@ -2,8 +2,13 @@
 !**/.*
 
 # Artifacts and Compiled Output
-ai.egg-info
-__pycache__
+dist
+
+# Dependencies
+node_modules
+
+# Environment
+.venv
 
 # Static Typing
 .mypy_cache
@@ -11,4 +16,3 @@ __pycache__
 # Test and Code Coverage
 .pytest_cache
 coverage
-.coverage
