--- a/packages/ai/mypy.ini
+++ b/packages/ai/mypy.ini
@@ -1,14 +1,10 @@
 [mypy]
+python_version = 3.10
+disallow_any_decorated = true
+disallow_any_explicit = true
+warn_unreachable = true
+strict = true
+show_error_context = true
 show_column_numbers = true
-disallow_any_generics = true
-disallow_subclassing_any = true
-disallow_untyped_calls = true
-disallow_untyped_defs = true
-disallow_incomplete_defs = true
-check_untyped_defs = true
-disallow_untyped_decorators = true
-no_implicit_optional = true
-warn_unused_ignores = true
-warn_return_any = true
-warn_redundant_casts = true
-warn_unused_configs = true
+show_error_codes = true
+pretty = true
