--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,7 @@ updates:
       - dependency-type: all
     labels:
       - ':horse: chore'
+      - ':rocket: automerge'
     open-pull-requests-limit: 10
     reviewers:
       - ajtorres9
@@ -20,6 +21,7 @@ updates:
       - dependency-type: all
     labels:
       - ':horse: chore'
+      - ':rocket: automerge'
     open-pull-requests-limit: 10
     reviewers:
       - ajtorres9
@@ -33,6 +35,7 @@ updates:
       - dependency-type: all
     labels:
       - ':horse: chore'
+      - ':rocket: automerge'
     open-pull-requests-limit: 10
     reviewers:
       - ajtorres9
